--- a/money/src/main/resources/application.properties
+++ b/money/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-# h2
+# database
 spring.datasource.url=jdbc:postgresql://localhost:5432/money
 spring.datasource.username=postgres
 spring.datasource.password=password
@@ -18,3 +18,6 @@ spring.flyway.baseline-on-migrate=true
 application.security.jwt.secret-key=404E63526782F413F4428472B4B6250645367566B5970
 application.security.jwt.expiration=864000000
 application.security.jwt.refresh-token.expiration=6048000000
+
+# api
+server.servlet.context-path=/api/v1
