--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Build with Maven
       run: ./mvnw install
 
-    - name: Test with Gradle
+    - name: Test with Maven
       run: ./mvnw test
