--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,11 +24,12 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
     
-    - name: Change to money directory
-      run: cd money
-
     - name: Build with Maven
-      run: ./mvnw install
+      run: |
+        cd money
+        ./mvnw install
 
     - name: Test with Maven
-      run: ./mvnw test
+      run: |
+        cd money
+        ./mvnw test
