--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Build with Maven
       run: |
         cd money
-        ./mvnw install
+        ./mvnw compile
 
     - name: Test with Maven
       run: |
