--- a/money/src/main/resources/application.properties
+++ b/money/src/main/resources/application.properties
@@ -3,21 +3,20 @@ server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/money
 spring.datasource.username=postgres
 spring.datasource.password=password
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-
+spring.jpa.open-in-view=false
 # reload
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
 spring.devtools.restart.exclude=WEB-INF/**
-
 # flyway
 spring.flyway.baseline-on-migrate=true
-
 # jwt
 application.security.jwt.secret-key=404E63526782F413F4428472B4B6250645367566B5970
 application.security.jwt.expiration=864000000
 application.security.jwt.refresh-token.expiration=6048000000
-
 # api
 server.servlet.context-path=/api/v1
+# doc
+springdoc.swagger-ui.path=/swagger-ui.html
