--- a/money/src/main/resources/application.properties
+++ b/money/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+logging.level.org.springframework.security=DEBUG
 # reload
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
