feat: added tests and kafka

--- a/money/pom.xml
+++ b/money/pom.xml
@@ -54,6 +54,12 @@
             <version>0.11.5</version>
         </dependency>
 
+        <!--kafka-->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
         <!--db-->
         <dependency>
             <groupId>org.postgresql</groupId>
