feat: added kafka docker-compose and config

--- a/money/src/main/resources/application.properties
+++ b/money/src/main/resources/application.properties
@@ -21,3 +21,5 @@ application.security.jwt.refresh-token.expiration=6048000000
 server.servlet.context-path=/api/v1
 # doc
 springdoc.swagger-ui.path=/swagger-ui.html
+# kafka
+spring.kafka.bootstrap-servers=localhost:9092
