--- a/money/src/main/resources/application.properties
+++ b/money/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+spring.application.name=moneyB
 # database
 spring.datasource.url=jdbc:postgresql://localhost:5432/money
 spring.datasource.username=postgres
@@ -7,6 +8,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 logging.level.org.springframework.security=DEBUG
+# hikaricp
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=20
 # reload
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
